compiler/src/test/resources/amyc/typer/failing/ConstructorError2.amy
object ConstructorError
  abstract class Foo 
  case class Bar(i: Int) extends Foo
  case class Baz(i: Int, t: Foo) extends Foo

  Baz(1, Baz(1, 2))
end ConstructorError
